# 42_Ft_printf

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  a.out  author  compile_danya.sh  compile_digs.sh  compile_floats.sh  compile_grind.sh  compile_liba.sh  printf.c  printf.h  res.txt
includes/: ft_printf.h  ft_strf.h  ldouble.h  printf.h
libft/: CMakeLists.txt  Makefile
libft/includes/: libft.h
libft/src/: ft_abs.c  ft_itoa_base.c  ft_return.c  ft_utoa.c
libft/src/atoi_itoa/: ft_itoa.c  ft_itoa_max.c  ft_lltoa.c  ft_mtob.c  ft_mtob_raw.c  ft_ulltoa.c  ft_utoa.c  ft_utoa_base.c
libft/src/lst/: ft_lstdelone.c  ft_lstmap.c  ft_lstnew.c
libft/src/mem/: ft_free.c  ft_memcpy.c  ft_memdel.c
libft/src/str/: ft_str_arr_free.c  ft_str_dup_rev.c  ft_str_from_char.c  ft_str_spam.c  ft_str_word_count.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strjoin_free.c  ft_strlen.c  ft_strrev.c  ft_strsplit.c  ft_strtrim.c
libft/src/test/: insert_func.c  insert_mem.c
src/: digit.c  flags.c  floats.c  ft_printf.c  ft_strf_resolve.c  insert_func.c  insert_mem.c  main.c  parse_flags.c  printf.c
src/flags/: flags_c.c  flags_di.c  flags_f.c  flags_o.c  flags_p.c  flags_perc.c  flags_s.c  flags_u.c  flags_x.c  ft_strf_flag_c.c  ft_strf_flag_cast.c  ft_strf_flag_di.c  ft_strf_flag_e.c  ft_strf_flag_o.c  ft_strf_flag_p.c  ft_strf_flag_perc.c  ft_strf_flag_s.c  ft_strf_flag_u.c  ft_strf_flag_unknown.c  ft_strf_flag_x.c
src/flags/f/: f_after_dot.c  f_special.c  flags_f.c  good_way.c  good_way_after.c  good_way_before.c  width_format.c  xxx_good_way_old.old
src/flags/float/: ft_strf_flag_f.c  ft_strf_flag_f_fast.c  ft_strf_flag_f_round.c  ft_strf_flag_f_special.c  ft_strf_flag_f_str.c
src/flags/old/: flags_o.c  flags_p.c  flags_s.c  flags_u.c  flags_x.c
src/flags/old/f/: f_after_dot.c  f_special.c  good_way_after.c  xxx_good_way.old
src/ft_printf/: ft_printf.c  ft_printf_resolve.c
src/ft_strf/: ft_strf.c  ft_strf_adjust.c  ft_strf_adjust_dioux.c  ft_strf_adjust_psc.c  ft_strf_format.c  ft_strf_parse.c  ft_strf_parse_utils.c  ft_strf_resolve.c
src/ft_strf_adjust/: ft_strf_adjust.c  ft_strf_adjust_dioux.c
src/ft_strf_format/: ft_strf_format_width.c
src/main/: ft_strf_main.c  main.c
src/numbers/: digit.c  flags_c.c  flags_di.c  flags_o.c  flags_p.c  flags_perc.c  flags_s.c  flags_u.c  flags_x.c  floats.c
src/strf/: ft_printf.c  ft_printf_resolve.c  ft_strf.c  ft_strf_adjust_dioux.c  ft_strf_adjust_pfsc.c  ft_strf_adjust_psc.c  ft_strf_flag_c.c  ft_strf_flag_cast.c  ft_strf_flag_di.c  ft_strf_flag_o.c  ft_strf_flag_perc.c  ft_strf_flag_s.c  ft_strf_flag_u.c  ft_strf_flag_unknown.c  ft_strf_flag_x.c  ft_strf_format.c  ft_strf_format_prec.c  ft_strf_format_zero.c  ft_strf_parse.c  ft_strf_resolve.c
src/strf/float/: ft_strf_flag_f.c  ft_strf_flag_f_str.c
